# django-invitations

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  ChangeLog  MANIFEST  MANIFEST.in  Makefile  README.md  manage.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_allauth_adapters.py  test_allauth_settings.py  test_settings.py  test_urls.py  tox.ini
.github/workflows/: codeql.yml  release.yml  test.yml
docs/: changelog.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  requirements.txt  usage.rst
invitations/: __init__.py  adapters.py  admin.py  app_settings.py  apps.py  base_invitation.py  exceptions.py  forms.py  managers.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
invitations/locale/de/LC_MESSAGES/: django.mo  django.po
invitations/locale/fr/LC_MESSAGES/: django.mo  django.po
invitations/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
invitations/locale/pt_PT/LC_MESSAGES/: django.mo  django.po
invitations/locale/ru/LC_MESSAGES/: django.mo  django.po
invitations/locale/uk/LC_MESSAGES/: django.mo  django.po
invitations/management/commands/: clear_expired_invitations.py
invitations/migrations/: 0001_initial.py  0002_auto_20151126_0426.py  0003_auto_20151126_1523.py  0004_auto_20230328_1430.py  0005_alter_invitation_inviter.py  __init__.py
invitations/south_migrations/: 0001_initial.py
invitations/templates/email/: email_invite_subject.txt
invitations/templates/forms/: _invite.html
invitations/templates/invitations/email/: email_invite_message.txt  email_invite_subject.txt
invitations/templates/invitations/errors/: alreadyAccepted.html  doesNotExist.html  expired.html
invitations/templates/invitations/forms/: _invite.html
invitations/templates/invitations/messages/: invite_accepted.txt  invite_already_accepted.txt  invite_expired.txt  invite_invalid.txt
invitations/templates/messages/: invite_accepted.txt
invitations/tests/: conftest.py
invitations/tests/allauth/: test_allauth.py
invitations/tests/basic/: tests.py
templates/email/: email_invite_message.txt
tests/: conftest.py  models.py  test_migrations.py
tests/allauth/: test_allauth.py
tests/basic/: tests.py
tests/migrations/: 0001_initial.py
