[tool.poetry]
name = "django-invitations"
version = "2.0.0"
description = "Generic invitations app with support for django-allauth"
authors = ["bee-keeper"]
homepage = "https://github.com/jazzband/django-invitations/"
repository = "https://github.com/jazzband/django-invitations/"
documentation = "https://django-invitations.readthedocs.io/en/latest/"
license = "GPL-3.0-only"
maintainers = ["JazzBand"]
readme = "README.md"
keywords = ['django', 'invitation', 'django-allauth', 'invite']
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Web Environment",
    "Topic :: Internet",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
packages = [
    { include = "invitations" }
]

[tool.poetry.dependencies]
python = "^3.7"
django = ">=3.2"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
flake8 = "^5.0.4"
freezegun = "^1.2.1"
pytest = "^7.1.1"
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"
tox = "3.26.0"
black = "^22.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[tool.black]
line-length = 88
target-version = ["py310"]
extend-exclude = "/migrations/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
