[metadata]
name = django-invitations
version = 1.9.3
description = Generic invitations app with support for django-allauth
long_description = file: README.md
author = https://github.com/bee-keeper
author_email = none@none.com
url = https://github.com/jazzband/django-invitations.git
keywords = django invitation django-allauth invite
license = GPL-3.0-only
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Environment :: Web Environment
    Topic :: Internet
    Framework :: Django
    Framework :: Django:: 3.2
    Framework :: Django:: 4.0
    Framework :: Django:: 4.1
    Framework :: Django:: 4.2
    Framework :: Django:: 5.0
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GPL-3.0-only
license_file = LICENSE

[options]
package_dir=
    =invitations
packages = find:
include_package_data = True
python_requires = >=3.7
zip_safe = False

[options.package_data]
invitations = "templates/*.*"

[options.packages.find]
where = invitations
